[package]
authors = ["zkbitcoin.com <admin@zkbitcoin.com>"]
categories = ["wasm"]
description = ""
edition = "2021"
license = "MIT"
name = "wasmlib"
readme = "README.md"
repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib","lib"]
name = "wasmlib"
path = "lib.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = {version = "0.4.2", optional = true}

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-futures = "0.4.28"
wasm-bindgen-test = "0.3.28"



[features]
#default = ["console_error_panic_hook"]
default = ["console_error_panic_hook", "wee_alloc"]
